--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,10 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 project.post.image=images/
+
+#Changes Spring boot admin user
+logging.level.org.springframework.secirity=DEBUG
+
+spring.security.user.name=ranit
+spring.security.user.password=ranit
+spring.security.user.roles=ADMIN
